# ticketing-tool-backend

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
app/: config.py  main.py
app/alembic/: env.py
app/alembic/versions/: 13769fc676f7_added_ticket_models.py  273d65d388af_updated_ticket_model.py  3e889d46a9d8_added_timestamp.py  53abdc28d705_init.py  895b4ad35c14_initialize_db.py
app/model/: mixins.py  ticket_assigned.py  ticket_categories_user.py  ticket_category.py  ticket_closer.py  tickets.py  users.py
app/routes/: ticket_category_route.py  ticket_route.py  users_route.py
app/schemas/: response_scheme.py  ticket_categories_user.py  ticket_category.py  tickets.py  users.py
app/service/: ticket_categories_user.py  ticket_category.py  tickets.py  users.py
app/service/authentication/: auth.py  security.py
app/utils/: exception_handler.py
